# pinyin-tool

./: Cargo.toml  LICENSE  README.md
src/: main.rs  pinyin_words.rs
