[package]
name = "pinyin-tool"
version = "0.1.0"
authors = ["Brian Kung <github@briankung.xyz>"]
edition = "2018"
description = "A simple command line tool to convert Chinese characters to pinyin."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinyin = "0.7"
unicode-segmentation = "1.6.0"
jieba-rs = "0.4"
regex = "1"
