[package]
name = "pinyin-tool"
version = "0.1.0"
authors = ["Brian Kung <github@briankung.xyz>"]
edition = "2018"
description = """
  A simple command line tool for converting Chinese characters to space-separate pinyin words.
"""
license = "MIT"
repository = "https://github.com/briankung/pinyin-tool"
keywords = ["chinese", "pinyin", "zhongwen", "cli"]
categories = ["Text processing", "Command line utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinyin = "0.7"
jieba-rs = "0.4"
regex-syntax = "0.6.14"

[profile.release]
# These settings optimize for size
codegen-units = 1
opt-level = 'z'
lto = true
panic = 'abort'